--- a/pharma-master/index.html
+++ b/pharma-master/index.html
@@ -154,36 +154,36 @@
         <div class="row">
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
             <span class="tag">Sale</span>
-            <a href="shop-single.html"> <img src="images/product_01.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">Bioderma</a></h3>
-            <p class="price"><del>95.00</del> &mdash; $55.00</p>
+            <a href="shop-single.html"> <img src="images/aspirineta.png" alt="Image"></a>
+            <h3 class="text-dark"><a href="shop-single.html">Aspirineta</a></h3>
+            <p class="price"> &mdash; $2550.00</p>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="shop-single.html"> <img src="images/product_02.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">Chanca Piedra</a></h3>
-            <p class="price">$70.00</p>
+            <a href="shop-single.html"> <img src="images/loratadina.jpg" alt="Image"></a>
+            <h3 class="text-dark"><a href="shop-single.html">Loratadina</a></h3>
+            <p class="price">$3700.00</p>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="shop-single.html"> <img src="images/product_03.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">Umcka Cold Care</a></h3>
-            <p class="price">$120.00</p>
+            <a href="shop-single.html"> <img src="images/paracetamol1.webp" alt="Image"></a>
+            <h3 class="text-dark"><a href="shop-single.html">Paracetamol Bayer</a></h3>
+            <p class="price">$2200.00</p>
           </div>
 
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
 
-            <a href="shop-single.html"> <img src="images/product_04.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">Cetyl Pure</a></h3>
-            <p class="price"><del>45.00</del> &mdash; $20.00</p>
+            <a href="shop-single.html"> <img src="images/paracetamol2.jpeg" alt="Image"></a>
+            <h3 class="text-dark"><a href="shop-single.html">Tylenol</a></h3>
+            <p class="price">&mdash; $1650.00</p>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
-            <a href="shop-single.html"> <img src="images/product_05.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">CLA Core</a></h3>
-            <p class="price">$38.00</p>
+            <a href="shop-single.html"> <img src="images/plusbelle.webp" alt="Image"></a>
+            <h3 class="text-dark"><a href="shop-single.html">Plusbelle</a></h3>
+            <p class="price">$3800.00</p>
           </div>
           <div class="col-sm-6 col-lg-4 text-center item mb-4">
             <span class="tag">Sale</span>
-            <a href="shop-single.html"> <img src="images/product_06.png" alt="Image"></a>
-            <h3 class="text-dark"><a href="shop-single.html">Poo Pourri</a></h3>
+            <a href="shop-single.html"> <img src="images/shampooPelados.jpg" alt="Image"></a>
+            <h3 class="text-dark"><a href="shop-single.html">Shampoo Para Pelados</a></h3>
             <p class="price"><del>$89</del> &mdash; $38.00</p>
           </div>
         </div>
