--- a/pharma-master/index.html
+++ b/pharma-master/index.html
@@ -257,7 +257,7 @@
               <div class="testimony">
                 <blockquote>
                   <img src="images/mascherano.jpg" alt="Image" class="img-fluid w-25 mb-4 rounded-circle">
-                  <p></p>
+                  <p>Yo soy el 1/10 que desaprueba colgate. Pero los productos que vende esta farmacia estan piola. </p>
                 </blockquote>
               
                 <p>&mdash; Javier Mascherano</p>
